--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -15,7 +15,7 @@ body{
 }
 #top_Div{
     width: 100%;
-    height: 65%;
+    height: 55%;
     text-align: center;
     display: table;
 }
@@ -26,7 +26,7 @@ body{
     vertical-align: bottom;
 }
 #logo_Image{
-    height:90%;
+    height: 144px;
 }
 #bottom_Div{
     width:100%;
@@ -38,6 +38,7 @@ table{
     margin-left: 30%;
 }
 table input{
+    border-radius: 3px;
     width:97%;
     height: 35px;
     opacity: 0.7;
@@ -57,6 +58,18 @@ table p{
     cursor: pointer;
     text-align: center;
 }
+@media only screen and (max-height: 370px) and (min-height: 0)  {  
+    #logo_Image{
+        margin-top: -10px;
+        height: 144px;
+    }
+}
+@media only screen and (max-width: 480px) and (min-width: 64px)  {
+    table{
+        width: 95% !important;
+        margin-left: 2% !important;
+    }
+}
 @media screen and (orientation: portrait) {
     body{
         width: 100%;
@@ -70,8 +83,7 @@ table p{
         margin-left: 15%;
     }
     #logo_Image{
-        width: 100%;
-        height:auto;
+        height: 144px;
     }
     #top_Div{
         height: 55%;
