--- a/public/stylesheets/specCompare.css
+++ b/public/stylesheets/specCompare.css
@@ -188,7 +188,7 @@ table{
         width: 20%;
     }
     #logo_Div{
-        width: 60%;
+        width: 40%;
     }
     .tile_title,.tile_value{
         font-size: 15px;
@@ -206,13 +206,17 @@ table{
         margin: 2px -15px 0 -15px;
     }
 }
-
+@media only screen and (max-width: 500px) and (min-width: 300px)  {
+    #logo_Div{
+        width: 54% !important;
+    }
+}
 @media screen and (orientation: portrait) {
     strong{
         font-size: 17px;
     }
     #logo_Div{
-        width: 42%;
+        width: 65%;
     }
     .article_div {
         width: 100%;
