--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -204,17 +204,22 @@ body,html{
 @media only screen and (max-width: 766px) and (min-width: 300px)  {
   
     #logo_Div{
-        width: 60%;
+        width: 40%;
     }
-
-   
 }
+
+@media only screen and (max-width: 500px) and (min-width: 300px)  {
+    #logo_Div{
+        width: 54% !important;
+    }
+}
+
 @media screen and (orientation: portrait) {
     strong{
         font-size: 17px;
     }
     #logo_Div{
-        width: 42%;
+        width: 65%;
     }
 }
 @media only screen and (max-width: 1025px) and (min-width: 767px)  {
