--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -27,7 +27,7 @@
                 </div>
                 <div>
                     &nbsp;
-                    <strong><%= user %></strong>
+                    <strong style="cursor:pointer"> <%= user %></strong>
                 </div>
                 <div>
                     <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
