(mypage제외)메시지 다이얼로그 안 뜨는 문제 수정
mypage는 어떤 이유에서 인지 이벤트 처리가 안 되고 있습니다..ㅜㅜ

--- a/public/stylesheets/userDetail.css
+++ b/public/stylesheets/userDetail.css
@@ -58,7 +58,13 @@ body,html{
 
 table{
     color: white;
-}.date{
+}
+
+.dlg_table {
+    color: #333 !important;
+}
+
+.date{
     width: 15%;
 }
 .content{
