--- a/views/userSearch.ejs
+++ b/views/userSearch.ejs
@@ -176,11 +176,11 @@
     </div>
 
     <!-- The Modal -->
-    <div class="modal fade" id="myModal">
+    <div class="modal dialogBack" id="myModal">
         <div class="modal-dialog" modal-lg>
-            <div class="modal-content">
+            <div class="modal-content dialogAnim">
                 <!-- Modal Header -->
-                <div class="modal-header" style="background-color: brown">
+                <div class="modal-header modal_header_styler">
                     <h4 class="modal-title" style="color: white">Message</h4>
                 </div>
                 <!-- Modal body -->
@@ -200,7 +200,7 @@
                     </table>
                 </div>
                 <!-- Modal footer -->
-                <div class="modal-footer">
+                <div class="modal-footer modal_footer_styler">
                     <button id='msgListCloseBtn' type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                 </div>
 
