--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -22,12 +22,12 @@
         <div id="user_Input">
             <div id="help_Vertical">
                 <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" />
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
                 <div>
                     &nbsp;
-                    <strong><%= user %></strong>
+                    <strong style="cursor:pointer"> <%= user %></strong>
                 </div>
                 <div>
                     <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
@@ -67,37 +67,36 @@
             </div>
         </div>
 
-               <!-- The Modal -->
-    <div class="modal dialogBack" id="dialogMessage">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content dialogAnim">
-            
-                <!-- Modal Header -->
-                <div class="modal-header modal_header_styler">
-                <h4 class="modal-title" style="color: white">Message</h4>
-                <button type="button" class="close modal_close_btn_styler" data-dismiss="modal" title="닫기">&times;</button>
-                </div>
+        <!-- The Modal -->
+        <div class="modal dialogBack" id="dialogMessage">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content dialogAnim">
                 
-                <!-- Modal body -->
-                <div class="modal-body modal_body_styler">
-                    <p style="font-size: 14px"><strong style="font-size: 14px">From. </strong><!--보내는 사람-->Chyh1900</p>
-                    <p style="font-size: 14px"><strong style="font-size: 14px">To. </strong><!--받는 사람-->Anonymous</p>
-                    <span><strong style="font-size: 14px">Title.</strong><input type="text"></span>
-                    <p style="font-size: 14px; padding-top: 10px"><strong style="font-size: 14px">Your Message.</strong></p>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <!-- Modal Header -->
+                    <div class="modal-header modal_header_styler">
+                    <h4 class="modal-title" style="color: white">Message</h4>
+                    <button type="button" class="close modal_close_btn_styler" data-dismiss="modal" title="닫기">&times;</button>
+                    </div>
+                    
+                    <!-- Modal body -->
+                    <div class="modal-body modal_body_styler">
+                        <p style="font-size: 14px"><strong style="font-size: 14px">From. </strong><!--보내는 사람-->Chyh1900</p>
+                        <p style="font-size: 14px"><strong style="font-size: 14px">To. </strong><!--받는 사람-->Anonymous</p>
+                        <span><strong style="font-size: 14px">Title.</strong><input type="text"></span>
+                        <p style="font-size: 14px; padding-top: 10px"><strong style="font-size: 14px">Your Message.</strong></p>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                    
+                    <!-- Modal footer -->
+                    <div class="modal-footer modal_footer_styler">
+                        <button type="button" class="btn btn-primary" title="전송">Send</button> <!--전송 버튼-->
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" title="취소">Cancel</button>
+                    </div>
+                    
                 </div>
-                
-                <!-- Modal footer -->
-                <div class="modal-footer modal_footer_styler">
-                    <button type="button" class="btn btn-primary" title="전송">Send</button> <!--전송 버튼-->
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" title="취소">Cancel</button>
-                </div>
-                
             </div>
         </div>
-    </div>
-                
-
+                    
         <div class="divider_h_o1">
             <div class="divider_h_i1"></div>
         </div>
@@ -207,7 +206,7 @@
 
                 <div class="container-fluid">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 apply_section">
-                   
+                    
                     <table class="table">
                         <thead>
                             <tr>
@@ -219,13 +218,13 @@
                         <tbody id="upload_Table">
                             <tr>
                                 <td>
-                                   18/6/24
+                                    18/6/24
                                 </td>
                                 <td>
-                                   카카오 SW기획 파트 인턴 서류 전형
+                                    카카오 SW기획 파트 인턴 서류 전형
                                 </td>
                                 <td>
-                                   불합격
+                                    불합격
                                 </td>
                             </tr>
                             <tr>
@@ -233,31 +232,31 @@
                                     18/7/12
                                 </td>
                                 <td>
-                                   네이버 개발파트(웹 프런트) 신입 정규직 서류
+                                    네이버 개발파트(웹 프런트) 신입 정규직 서류
                                 </td>
                                 <td>
-                                   합격
+                                    합격
                                 </td>
                                 <tr>
                                     <td>
-                                     18/7/7
+                                        18/7/7
                                     </td>
                                     <td>
                                         삼성 SDS SW개발파트 신입 정규직 서류
                                     </td>
                                     <td>
-                                     합격
+                                        합격
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                      18/7/15
+                                        18/7/15
                                     </td>
                                     <td>
-                                      삼성 SDS SW개발파트 신입 정규직 1차 면접(알고리즘)
+                                        삼성 SDS SW개발파트 신입 정규직 1차 면접(알고리즘)
                                     </td>
                                     <td>
-                                   대기중
+                                    대기중
                                     </td>
                                 </tr>
                         </tbody>
@@ -295,6 +294,43 @@
             </div>
         </div>
     </div>
+
+    <!-- The Modal -->
+    <div class="modal dialogBack" id="myModal">
+        <div class="modal-dialog" modal-lg>
+            <div class="modal-content dialogAnim">
+                <!-- Modal Header -->
+                <div class="modal-header modal_header_styler">
+                    <h4 class="modal-title" style="color: white">Message</h4>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <table class="table dlg_table">
+                        <thead>
+                            <tr>
+                                <th>보낸사람</th>
+                                <th>제목</th>
+                                <th>날짜</th>
+                                <th>읽음</th>
+                            </tr>
+                        </thead>
+                        <tbody id='msg_list'>
+                            <!-- msg list show -->
+                        </tbody>
+                    </table>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer modal_footer_styler">
+                    <button id='msgListCloseBtn' type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- msg detail show -->
+    <div id='msg_detail'></div>
+
     <script src="/javascripts/userDetail.js"></script>
 </body>
 
