메세지 완성 및 userDetail 링크 추가

--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -238,10 +238,10 @@
           $('#msg_detail').html(data);
         });
 
-        $('#msgListCloseBtn').click(function(){
-          clearInterval(newMsgCheck);
-          location.reload();
-        });
+        // $('#msgListCloseBtn').click(function(){
+        //   clearInterval(newMsgCheck);
+        //   location.reload();
+        // });
     </script>
 
 </body>
