--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -22,12 +22,12 @@
         <div id="user_Input">
             <div id="help_Vertical">
                 <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" />
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
                 <div>
                     &nbsp;
-                    <strong><%= user %></strong>
+                    <strong style="cursor:pointer"> <%= user %></strong>
                 </div>
                 <div>
                     <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
@@ -38,7 +38,7 @@
 
     <div class="article_div">
         <div class="user_div">
-            
+
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-xs-0 col-sm-4 col-md-4 col-lg-4">
@@ -52,7 +52,7 @@
                                     <!-- 메시지 전송 버튼 -->
                                     <img src="/images/message_light.png" class="send_msg_btn_img" alt="">
                                 </div>
-                                최세인
+                                <%= senior.user_id %>
                                 <!-- 사용자 이름 -->
                             </h3>
                         </div>
@@ -60,52 +60,94 @@
                     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
                         <div style="display: flex;justify-content: center;padding-top: 18px;">
                             <!--사용자 학과-->
-                            <h4 style="margin-left: auto;margin-right: 8px;color: rgb(187, 187, 187);">컴퓨터공학과</h4>
+                            <h4 style="margin-left: auto;margin-right: 8px;color: rgb(187, 187, 187);"><%= senior.major %></h4>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-               <!-- The Modal -->
-    <div class="modal dialogBack" id="dialogMessage">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content dialogAnim">
-            
-                <!-- Modal Header -->
-                <div class="modal-header modal_header_styler">
-                <h4 class="modal-title" style="color: white">Message</h4>
-                <button type="button" class="close modal_close_btn_styler" data-dismiss="modal" title="닫기">&times;</button>
+        <!-- The Modal -->
+        <div class="modal dialogBack" id="dialogMessage">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content dialogAnim">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header modal_header_styler">
+                    <h4 class="modal-title" style="color: white">Message</h4>
+                    <button type="button" class="close modal_close_btn_styler" data-dismiss="modal" title="닫기">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body modal_body_styler">
+                        <p style="font-size: 14px"><strong style="font-size: 14px">From. </strong><!--보내는 사람--><%= user %></p>
+                        <p style="font-size: 14px"><strong style="font-size: 14px">To. </strong><!--받는 사람--><%= senior.user_id %></p>
+                        <span><strong style="font-size: 14px">Title.</strong><input type="text" id='replyTitle'></span>
+                        <p style="font-size: 14px; padding-top: 10px"><strong style="font-size: 14px">Your Message.</strong></p>
+                        <textarea name="" id="replyContent" cols="30" rows="10"></textarea>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer modal_footer_styler">
+                        <button type="button" class="btn btn-primary" id='sendBtn' title="전송">Send</button> <!--전송 버튼-->
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" title="취소">Cancel</button>
+                    </div>
+                    <script>
+                      $('#sendBtn').click(function() {
+
+                        var now = new Date();
+                        function leadingZeros(n, digits){
+                          var zero='';
+                          n = n.toString();
+                          if(n.length < digits){
+                            for(i = 0 ; i < digits - n.length; i++){
+                              zero += '0';
+                            }
+                          }
+                          return zero + n;
+                        }
+                        var post_date = leadingZeros(now.getYear()-100,2)+ '-'+
+                        leadingZeros(now.getMonth()+1,2)+'-' +
+                        leadingZeros(now.getDate(),2);
+
+                        var data = {
+                          post_user: '<%= user %>',
+                          recv_user: '<%= senior.user_id %>',
+                          title: $('#replyTitle').val(),
+                          contents: $('#replyContent').val(),
+                          post_date: post_date,
+                        };
+                        $.ajax({
+                          type: "POST",
+                          url: "/msg/postMsg",
+                          contentType: "application/x-www-form-urlencoded; charset=UTF-8",
+                          cache: false,
+                          data: data,
+                          datatype: "json",
+                          success: function(result) {
+                            if(result['result']=='success'){
+                              alert('답장 성공');
+                              location.reload();
+                            }
+                            else
+                            alert('답장 실패');
+                          },
+                        });
+                      });
+                    </script>
+
                 </div>
-                
-                <!-- Modal body -->
-                <div class="modal-body modal_body_styler">
-                    <p style="font-size: 14px"><strong style="font-size: 14px">From. </strong><!--보내는 사람-->Chyh1900</p>
-                    <p style="font-size: 14px"><strong style="font-size: 14px">To. </strong><!--받는 사람-->Anonymous</p>
-                    <span><strong style="font-size: 14px">Title.</strong><input type="text"></span>
-                    <p style="font-size: 14px; padding-top: 10px"><strong style="font-size: 14px">Your Message.</strong></p>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                </div>
-                
-                <!-- Modal footer -->
-                <div class="modal-footer modal_footer_styler">
-                    <button type="button" class="btn btn-primary" title="전송">Send</button> <!--전송 버튼-->
-                    <button type="button" class="btn btn-danger" data-dismiss="modal" title="취소">Cancel</button>
-                </div>
-                
             </div>
         </div>
-    </div>
-                
 
         <div class="divider_h_o1">
             <div class="divider_h_i1"></div>
         </div>
 
         <div class="container-fluid curtain">
-            
+
             <div class="row">
-                
+
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-5 tile_section">
                     <div class="container-fluid" style="padding-top: 16px;">
 
@@ -117,7 +159,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.grade %></div>
                                 </div>
                             </div>
 
@@ -127,7 +169,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">700</div>
+                                    <div class="tile_value"><%= senior.toeic %></div>
                                 </div>
                             </div>
 
@@ -137,7 +179,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.toss_num %></div>
                                 </div>
                             </div>
 
@@ -147,7 +189,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.opic_num %></div>
                                 </div>
                             </div>
 
@@ -157,7 +199,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.volunteer %></div>
                                 </div>
                             </div>
 
@@ -167,7 +209,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.intern %></div>
                                 </div>
                             </div>
 
@@ -177,7 +219,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.competition %></div>
                                 </div>
                             </div>
 
@@ -187,7 +229,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.activity %></div>
                                 </div>
                             </div>
 
@@ -197,7 +239,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value">3.5</div>
+                                    <div class="tile_value"><%= senior.certificate %></div>
                                 </div>
                             </div>
 
@@ -207,7 +249,7 @@
 
                 <div class="container-fluid">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 apply_section">
-                   
+
                     <table class="table">
                         <thead>
                             <tr>
@@ -217,49 +259,29 @@
                             </tr>
                         </thead>
                         <tbody id="upload_Table">
-                            <tr>
-                                <td>
-                                   18/6/24
-                                </td>
-                                <td>
-                                   카카오 SW기획 파트 인턴 서류 전형
-                                </td>
-                                <td>
-                                   불합격
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    18/7/12
-                                </td>
-                                <td>
-                                   네이버 개발파트(웹 프런트) 신입 정규직 서류
-                                </td>
-                                <td>
-                                   합격
-                                </td>
+                            <% if(seniorContent) { %>
+                              <% for(var i=0; i<seniorContent.length; i++) { %>
                                 <tr>
-                                    <td>
-                                     18/7/7
-                                    </td>
-                                    <td>
-                                        삼성 SDS SW개발파트 신입 정규직 서류
-                                    </td>
-                                    <td>
-                                     합격
-                                    </td>
+                                  <td>
+                                      <%= seniorContent[i].date %>
+                                  </td>
+                                  <td>
+                                      <%= seniorContent[i].content %>
+                                  </td>
+                                  <td>
+                                      <%= seniorContent[i].result %>
+                                  </td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                      18/7/15
-                                    </td>
-                                    <td>
-                                      삼성 SDS SW개발파트 신입 정규직 1차 면접(알고리즘)
-                                    </td>
-                                    <td>
-                                   대기중
-                                    </td>
-                                </tr>
+                              <% } %>
+
+                            <% } else{ %>
+                              <tr>
+                                <td></td>
+                                <td>해당 유저가 입력한 내용이 없습니다.</td>
+                                <td></td>
+                              </tr>
+                            <% } %>
+
                         </tbody>
                     </table>
                     </div>
@@ -287,7 +309,7 @@
                                 var 합격여부 = ["불합", "불합", "대기", "합격", "대기"];
 
                                 addApplyList(지원날짜, 지원내용, 합격여부);
-                            </script> /***********************************************************/
+                            </script> /**********************************************************/
 
                         </div>
                     </div> -->
@@ -295,6 +317,43 @@
             </div>
         </div>
     </div>
+
+    <!-- The Modal -->
+    <div class="modal dialogBack" id="myModal">
+        <div class="modal-dialog" modal-lg>
+            <div class="modal-content dialogAnim">
+                <!-- Modal Header -->
+                <div class="modal-header modal_header_styler">
+                    <h4 class="modal-title" style="color: white">Message</h4>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <table class="table dlg_table">
+                        <thead>
+                            <tr>
+                                <th>보낸사람</th>
+                                <th>제목</th>
+                                <th>날짜</th>
+                                <th>읽음</th>
+                            </tr>
+                        </thead>
+                        <tbody id='msg_list'>
+                            <!-- msg list show -->
+                        </tbody>
+                    </table>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer modal_footer_styler">
+                    <button id='msgListCloseBtn' type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- msg detail show -->
+    <div id='msg_detail'></div>
+
     <script src="/javascripts/userDetail.js"></script>
 </body>
 
