--- a/public/stylesheets/join.css
+++ b/public/stylesheets/join.css
@@ -1,3 +1,4 @@
+
 body,html{
     width: 100%;
     height: 100%;
@@ -29,4 +30,10 @@ input{
 }
 #join_Button{
     margin-bottom: 3%;
+}
+@media only screen and (max-width: 500px) and (min-width: 300px)  {
+    #nav_Div{
+        height: 50px;
+    }
+
 }
