오픽 표시 수정

--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -189,7 +189,21 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value"><%= senior.opic_num %></div>
+                                    <% if(senior.opic_num == 0) { %>
+                                      <div class="tile_value">AL</div>
+                                    <% } else if(senior.opic_num == 1) { %>
+                                      <div class="tile_value">IH</div>
+                                    <% } else if(senior.opic_num == 2) { %>
+                                      <div class="tile_value">IM3</div>
+                                    <% } else if(senior.opic_num == 3) { %>
+                                      <div class="tile_value">IM2</div>  
+                                    <% } else if(senior.opic_num == 4) { %>
+                                      <div class="tile_value">IM1</div>
+                                    <% } else if(senior.opic_num == 5) { %>
+                                      <div class="tile_value">IL</div>
+                                    <% } else if(senior.opic_num == 6) { %>
+                                      <div class="tile_value">0</div>
+                                    <% } %>
                                 </div>
                             </div>
 
